--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  },
   "SeriLog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -17,7 +20,7 @@
       },
       {
         "Name": "Seq",
-        "Args":  {"serverUrl":  "http://localhost/5341"}
+        "Args": { "serverUrl": "http://localhost/5341" }
       }
     ]
   },
